Fix spinner spacing

--- a/ui/app/styles/common.less
+++ b/ui/app/styles/common.less
@@ -78,8 +78,9 @@ form.ng-valid .button-validation-error {
 .gt-button-spinner {
   // relative position needed spinner
   position: relative;
-  margin-top: 16px;
-  margin-left: 32px;
+  display: inline-block;
+  margin-top: -8px;
+  margin-left: 20px;
   vertical-align: middle;
 }
 
